package com.gilxyj.abstractfactory.cheese;

public interface Cheese {
}
