package com.gilxyj.abstractfactory.sauce;

public interface Sauce {
}
