package com.gilxyj.abstractfactory.veggie;

public interface Veggies {
}
